--- a/ft.serverone/.gitignore
+++ b/ft.serverone/.gitignore
@@ -1,24 +1,10 @@
-target/
-!.mvn/wrapper/maven-wrapper.jar
-
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-
-### NetBeans ###
-nbproject/private/
-build/
-nbbuild/
-dist/
-nbdist/
-.nb-gradle/
+/.mvn/
+/.settings/
+/target/
+/.classpath
+/.project
+/mvnw
+/mvnw.cmd
+/.idea/
+/websocket-example.iml
+log/
