--- a/ft.serverone/pom.xml
+++ b/ft.serverone/pom.xml
@@ -4,8 +4,8 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.future.technology</groupId>
-	<artifactId>ft.serverone</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<artifactId>udbs</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>ft.serverone</name>
