陈三三 2017/12/04 内容模块提交

--- a/ft.serverone/src/main/resources/application.yml
+++ b/ft.serverone/src/main/resources/application.yml
@@ -21,3 +21,5 @@ spring:
       testOnReturn: false
       poolPreparedStatements: true
       useGlobalDataSourceStat: true
+essay:
+  pictureLocation: D:\picture\
