--- a/ft.serverone/src/main/resources/application.yml
+++ b/ft.serverone/src/main/resources/application.yml
@@ -23,5 +23,7 @@ spring:
       useGlobalDataSourceStat: true
 essay:
   pictureLocation: D:\picture\
+  requestUrl: http://localhost:8880/picture/
 operation:
   sourceLocation: D:\sources\
+  requestUrl: http://localhost:8880/sources/
