--- a/ft.serverone/pom.xml
+++ b/ft.serverone/pom.xml
@@ -102,6 +102,18 @@
 			<artifactId>mybatis</artifactId>
 			<version>3.4.0</version>
 		</dependency>
+
+		<!--引入swagger2-->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.7.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.7.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
