--- a/ft.serverone/src/main/resources/application.yml
+++ b/ft.serverone/src/main/resources/application.yml
@@ -21,6 +21,9 @@ spring:
       testOnReturn: false
       poolPreparedStatements: true
       useGlobalDataSourceStat: true
+  http:
+    multipart:
+      max-file-size: 10MB
 essay:
   pictureLocation: D:\udbs\picture\
   requestUrl: http://localhost:8880/picture/
